Rajout de balises pour google pages double

--- a/en/about.html
+++ b/en/about.html
@@ -56,6 +56,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" media="print" onload="this.media='all'">
+
+  <!-- Hreflang tags for SEO -->
+  <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/info.html" />
+  <link rel="alternate" hreflang="en" href="https://www.javachrist.fr/en/about.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
+  
 </head>
 
 <body>
