--- a/en/faq.html
+++ b/en/faq.html
@@ -21,7 +21,8 @@
   <link rel="shortcut icon" href="/assets/logo/favicon.ico" type="image/x-icon" />
 
   <!-- Meta Description for SEO -->
-  <meta name="description" content="Find answers to common questions about our web development services, pricing, project timelines, and maintenance. Clear information to help you make informed decisions." />
+  <meta name="description"
+    content="Find answers to common questions about our web development services, pricing, project timelines, and maintenance. Clear information to help you make informed decisions." />
 
   <!-- Open Graph Data (Facebook, LinkedIn) -->
   <meta property="og:url" content="https://www.javachrist.fr" />
@@ -49,7 +50,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <!-- Favicon -->  
+  <!-- Favicon -->
   <link rel="shortcut icon" href="/assets/logo/favicon.ico" type="image/x-icon">
 
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
@@ -61,6 +62,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" media="print" onload="this.media='all'">
+
+  <!-- Hreflang tags for SEO -->
+  <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/faq.html" />
+  <link rel="alternate" hreflang="en" href="https://www.javachrist.fr/en/faq.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
 </head>
 
 <body>
@@ -111,7 +117,7 @@
       <a href="/en/forum.html" style="--i: 8">Forum</a>
       <a href="/index.html" style="--i: 9">Français</a>
       <a href="/en/login-en.html" style="--i: 10">Login</a>
-  </nav>
+    </nav>
 
     <div class="hamburger" id="hamburger">
       <i class="bx bx-menu"></i>
@@ -135,13 +141,11 @@
           <li class="faq__question">
             <button class="faq__question-toggler" aria-expanded="false" aria-controls="content-container-1"
               id="accordion-btn1">
-              <img src="/assets/logo/chevron.svg" alt=""
-                class="faq__question-toggler-icon" />
+              <img src="/assets/logo/chevron.svg" alt="" class="faq__question-toggler-icon" />
               <span class="faq__question-toggler-text">What kind of websites can you create ?</span>
             </button>
 
-            <div class="faq__content-container" aria-labelledby="accordion-btn1"
-              id="content-container-1">
+            <div class="faq__content-container" aria-labelledby="accordion-btn1" id="content-container-1">
 
               <div class="faq__content">
                 <p class="faq__content-text">
@@ -169,14 +173,14 @@
                 <p class="faq__content-text">
                   The process begins with a <a class="faq__link" href="/assets/Questionnaire.pdf" target="_blank">
                     questionary</a>
-                    that I suggest you fill out, <strong>followed by a meeting </strong> to understand your
-                    needs.
-                    Then I create a model
-                    of the site that <strong> we
-                      let’s validate together. </strong> Once the model is approved, I go to development and you
-                    informed of
-                    advancement.
-                    Finally, <strong> after final validation,</strong> the site is put online.
+                  that I suggest you fill out, <strong>followed by a meeting </strong> to understand your
+                  needs.
+                  Then I create a model
+                  of the site that <strong> we
+                    let’s validate together. </strong> Once the model is approved, I go to development and you
+                  informed of
+                  advancement.
+                  Finally, <strong> after final validation,</strong> the site is put online.
                 </p>
               </div>
             </div>
@@ -345,28 +349,28 @@
   <footer>
     <p id="copyright">&copy; <span id="year"></span> JavaChrist. All rights reserved.</p>
     <div>
-        <a href="/en/legal-notice.html" class="license-link">
-            Legal notice |
-        </a>
-        <a href="/en/privacy-policy.html" class="license-link">Privacy policy</a>
+      <a href="/en/legal-notice.html" class="license-link">
+        Legal notice |
+      </a>
+      <a href="/en/privacy-policy.html" class="license-link">Privacy policy</a>
     </div>
 
     <div class="home-sci">
-        <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
-            <i class="bx bxl-twitter" aria-hidden="true"></i>
-            <span class="sr-only">Follow me on Twitter</span>
-        </a>
-        <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
-            <i class="bx bxl-linkedin" aria-hidden="true"></i>
-            <span class="sr-only">Connect with me on LinkedIn</span>
-        </a>
-        <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
-            <i class="bx bxl-github" aria-hidden="true"></i>
-            <span class="sr-only">Check out my projects on GitHub</span>
-        </a>
+      <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
+        <i class="bx bxl-twitter" aria-hidden="true"></i>
+        <span class="sr-only">Follow me on Twitter</span>
+      </a>
+      <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
+        <i class="bx bxl-linkedin" aria-hidden="true"></i>
+        <span class="sr-only">Connect with me on LinkedIn</span>
+      </a>
+      <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
+        <i class="bx bxl-github" aria-hidden="true"></i>
+        <span class="sr-only">Check out my projects on GitHub</span>
+      </a>
     </div>
-</footer>
-    
+  </footer>
+
   <script src="/faq.js"></script>
   <script src="/script.js"></script>
 </body>
