--- a/en/home.html
+++ b/en/home.html
@@ -57,6 +57,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet" media="print" onload="this.media='all'">
+
+    <!-- Hreflang tags for SEO -->
+    <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/index.html" />
+    <link rel="alternate" hreflang="en" href="https://www.javachrist.fr/en/home.html" />
+    <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
+    
 </head>
 
 <body>
@@ -131,7 +137,7 @@
                 Your browser does not support video
             </video>
             <!-- Image de remplacement pour les petits écrans -->
-            <img src="/assets/image/vignette-video-developpeur-web.jpg" alt="Developer image in front of screen"
+            <img src="/assets/image/thumbnail.jpg" alt="Developer image in front of screen"
                 class="background-image">
 
             <div class="home-content">
