--- a/fr/sujet-3.html
+++ b/fr/sujet-3.html
@@ -57,7 +57,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-  rel="stylesheet" media="print" onload="this.media='all'">
+    rel="stylesheet" media="print" onload="this.media='all'">
+
+  <!-- Hreflang tags for SEO -->
+  <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/sujet-3.html" />
+  <link rel="alternate" hreflang="en" href="https://www.javachrist.fr/en/sujet-3.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
 </head>
 
 <body>
@@ -95,7 +100,7 @@
           loading="lazy" class="ai-icon">
       </picture>
     </div>
-    
+
     <nav class="navbar" id="nav-links">
       <a href="/index.html" style="--i: 1">Accueil</a>
       <a href="/fr/blog.html" style="--i: 2">Blog</a>
@@ -104,9 +109,9 @@
       <a href="/fr/projets.html" style="--i: 5">Projets</a>
       <a href="/fr/contact.html" style="--i: 6">Contact</a>
       <a href="/fr/faq.html" style="--i: 7">FAQ</a>
-        <a href="/fr/forum.html" style="--i: 8">Forum</a>
-        <a href="/en/home.html" style="--i: 9">English</a>
-        <a href="/fr/login.html" style="--i: 10">Login</a>
+      <a href="/fr/forum.html" style="--i: 8">Forum</a>
+      <a href="/en/home.html" style="--i: 9">English</a>
+      <a href="/fr/login.html" style="--i: 10">Login</a>
     </nav>
 
     <div class="hamburger" id="hamburger">
@@ -496,28 +501,28 @@
     <p id="copyright">&copy; <span id="year"></span> JavaChrist. Tous droits réservés.</p>
 
     <div>
-        <a href="/fr/mentions-legales.html" class="license-link">
-            Mentions légales |
-        </a>
-        <a href="/fr/politique-confidentialite.html" class="license-link">Politique de confidentialité</a>
+      <a href="/fr/mentions-legales.html" class="license-link">
+        Mentions légales |
+      </a>
+      <a href="/fr/politique-confidentialite.html" class="license-link">Politique de confidentialité</a>
     </div>
 
     <div class="home-sci">
-        <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
-            <i class="bx bxl-twitter" aria-hidden="true"></i>
-            <span class="sr-only">Suivez-moi sur Twitter</span>
-        </a>
-        <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
-            <i class="bx bxl-linkedin" aria-hidden="true"></i>
-            <span class="sr-only">Suivez-moi sur LinkedIn</span>
-        </a>
-        <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
-            <i class="bx bxl-github" aria-hidden="true"></i>
-            <span class="sr-only">Regardez mon travail sur Github</span>
-        </a>
+      <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
+        <i class="bx bxl-twitter" aria-hidden="true"></i>
+        <span class="sr-only">Suivez-moi sur Twitter</span>
+      </a>
+      <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
+        <i class="bx bxl-linkedin" aria-hidden="true"></i>
+        <span class="sr-only">Suivez-moi sur LinkedIn</span>
+      </a>
+      <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
+        <i class="bx bxl-github" aria-hidden="true"></i>
+        <span class="sr-only">Regardez mon travail sur Github</span>
+      </a>
     </div>
 
-</footer>
+  </footer>
 
   <script src="/script.js"></script>
 </body>
