--- a/en/sujet-2.html
+++ b/en/sujet-2.html
@@ -21,7 +21,8 @@
   <link rel="shortcut icon" href="/assets/logo/favicon.ico" type="image/x-icon" />
 
   <!-- Meta Description for SEO -->
-  <meta name="description" content="Learn how artificial intelligence transforms web development. Discover AI applications in coding, testing, and user experience with JavaChrist, expert web developer in Toulouse." />
+  <meta name="description"
+    content="Learn how artificial intelligence transforms web development. Discover AI applications in coding, testing, and user experience with JavaChrist, expert web developer in Toulouse." />
 
   <!-- Open Graph Data (Facebook, LinkedIn) -->
   <meta property="og:url" content="https://www.javachrist.fr" />
@@ -55,6 +56,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" media="print" onload="this.media='all'">
+
+  <!-- Hreflang tags for SEO -->
+  <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/sujet-2.html" />
+  <link rel="alternate" hreflang="en" href="https://www.javachrist.fr/en/sujet-2.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
 </head>
 
 <body>
@@ -104,7 +110,7 @@
       <a href="/en/forum.html" style="--i: 8">Forum</a>
       <a href="/index.html" style="--i: 9">Français</a>
       <a href="/en/login-en.html" style="--i: 10">Login</a>
-  </nav>
+    </nav>
 
     <div class="hamburger" id="hamburger">
       <i class="bx bx-menu"></i>
@@ -265,22 +271,22 @@
       <h2>1.IA in enterprises</h2>
       <ul>
         <li><strong>Process automation</strong> : AI like RPA (Robotic Process Automation) automate
-        the
-        repetitive tasks
-        such as data entry, invoicing and inventory management. </li>
+          the
+          repetitive tasks
+          such as data entry, invoicing and inventory management. </li>
         <li><strong>Predictive analytics</strong>: AI like IBM Watson analyzes historical data to predict
           the
           future trends,
           Helping companies make informed decisions.</li>
         <li><strong>Customer support</strong> : AI-powered chatbots, such as those developed by Zendesk,
-        provide customer support
-        24/7, reducing wait times and improving customer satisfaction. </li>
+          provide customer support
+          24/7, reducing wait times and improving customer satisfaction. </li>
         <li><strong>Recruitment</strong>: IAs like HireVue are analyzing applications and video interviews to
           help recruiters to
           Identify the best talent.</li>
         <li><strong>Marketing</strong> : Tools like Salesforce Einstein use AI to customize
-        marketing campaigns and
-        Improve conversion rates.</li>
+          marketing campaigns and
+          Improve conversion rates.</li>
       </ul>
     </section>
 
@@ -293,24 +299,24 @@
           User habits and preferences to offer personalized suggestions.</li>
 
         <li><strong>Health and wellness</strong> :Health apps using AI, such as Apple Health
-        and Fitbit, track users' health settings and offer tips to improve
-        their well-being. They can monitor physical activity levels, sleep patterns,
-        and provide recommendations for a healthier life. </li>
+          and Fitbit, track users' health settings and offer tips to improve
+          their well-being. They can monitor physical activity levels, sleep patterns,
+          and provide recommendations for a healthier life. </li>
 
         <li><strong>Transport and navigation</strong> : Smart navigation systems like Waze and Google
-        Maps use AI to provide the fastest and most efficient routes based on conditions
-        real-time traffic, helping drivers avoid traffic jams and find the best
-        roads.</li>
+          Maps use AI to provide the fastest and most efficient routes based on conditions
+          real-time traffic, helping drivers avoid traffic jams and find the best
+          roads.</li>
 
         <li><strong>Entertainment</strong> : Streaming platforms like Netflix and Spotify use
-        AI algorithms to recommend movies, series and music based on the preferences of
-        users, providing a personalized and enriched entertainment experience.</li>
+          AI algorithms to recommend movies, series and music based on the preferences of
+          users, providing a personalized and enriched entertainment experience.</li>
 
         <li><strong>Achat en ligne</strong> : AI like those used by Amazon analyze behaviors
-        to suggest products that might be of interest to users. They improve
-        the experience
-        Online shopping by providing relevant recommendations and anticipating customer needs. </li>
-        
+          to suggest products that might be of interest to users. They improve
+          the experience
+          Online shopping by providing relevant recommendations and anticipating customer needs. </li>
+
         <li><strong>Home Security</strong>: Smart security systems, such as Nest and Ring,
           use
           AI to detect suspicious movements and send real-time alerts. They can also
@@ -326,28 +332,28 @@
   <footer>
     <p id="copyright">&copy; <span id="year"></span> JavaChrist. All rights reserved.</p>
     <div>
-        <a href="/en/legal-notice.html" class="license-link">
-            Legal notice |
-        </a>
-        <a href="/en/privacy-policy.html" class="license-link">Privacy policy</a>
+      <a href="/en/legal-notice.html" class="license-link">
+        Legal notice |
+      </a>
+      <a href="/en/privacy-policy.html" class="license-link">Privacy policy</a>
     </div>
 
     <div class="home-sci">
-        <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
-            <i class="bx bxl-twitter" aria-hidden="true"></i>
-            <span class="sr-only">Follow me on Twitter</span>
-        </a>
-        <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
-            <i class="bx bxl-linkedin" aria-hidden="true"></i>
-            <span class="sr-only">Connect with me on LinkedIn</span>
-        </a>
-        <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
-            <i class="bx bxl-github" aria-hidden="true"></i>
-            <span class="sr-only">Check out my projects on GitHub</span>
-        </a>
+      <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
+        <i class="bx bxl-twitter" aria-hidden="true"></i>
+        <span class="sr-only">Follow me on Twitter</span>
+      </a>
+      <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
+        <i class="bx bxl-linkedin" aria-hidden="true"></i>
+        <span class="sr-only">Connect with me on LinkedIn</span>
+      </a>
+      <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
+        <i class="bx bxl-github" aria-hidden="true"></i>
+        <span class="sr-only">Check out my projects on GitHub</span>
+      </a>
     </div>
-</footer>
-  
+  </footer>
+
   <script src="/script.js"></script>
 </body>
 
