--- a/fr/forum.html
+++ b/fr/forum.html
@@ -23,7 +23,8 @@
   <link rel="shortcut icon" href="/assets/logo/favicon.ico" type="image/x-icon" />
 
   <!-- Meta Description for SEO -->
-  <meta name="description" content="Participez aux discussions sur le développement web, partagez vos expériences et posez vos questions dans notre forum dédié à la communauté web." />
+  <meta name="description"
+    content="Participez aux discussions sur le développement web, partagez vos expériences et posez vos questions dans notre forum dédié à la communauté web." />
 
   <!-- Open Graph Data (Facebook, LinkedIn) -->
   <meta property="og:url" content="https://www.javachrist.fr" />
@@ -55,7 +56,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-  rel="stylesheet" media="print" onload="this.media='all'">
+    rel="stylesheet" media="print" onload="this.media='all'">
 
   <!-- Firebase SDK -->
   <script type="module">
@@ -69,10 +70,15 @@
   <script src="/forum.js" type="module" defer></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="text/javascript">
-    (function() {
+    (function () {
       emailjs.init("VOTRE_CLE_PUBLIQUE_EMAILJS");
     })();
   </script>
+
+  <!-- Hreflang tags for SEO -->
+  <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/forum.html" />
+  <link rel="alternate" hreflang="en" href="https://www.javachrist.fr/en/forum.html" />
+  <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
 </head>
 
 <body>
@@ -153,54 +159,55 @@
     <p id="copyright">&copy; <span id="year"></span> JavaChrist. Tous droits réservés.</p>
 
     <div>
-        <a href="/fr/mentions-legales.html" class="license-link">
-            Mentions légales |
-        </a>
-        <a href="/fr/politique-confidentialite.html" class="license-link">Politique de confidentialité</a>
+      <a href="/fr/mentions-legales.html" class="license-link">
+        Mentions légales |
+      </a>
+      <a href="/fr/politique-confidentialite.html" class="license-link">Politique de confidentialité</a>
     </div>
 
     <div class="home-sci">
-        <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
-            <i class="bx bxl-twitter" aria-hidden="true"></i>
-            <span class="sr-only">Suivez-moi sur Twitter</span>
-        </a>
-        <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
-            <i class="bx bxl-linkedin" aria-hidden="true"></i>
-            <span class="sr-only">Suivez-moi sur LinkedIn</span>
-        </a>
-        <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
-            <i class="bx bxl-github" aria-hidden="true"></i>
-            <span class="sr-only">Regardez mon travail sur Github</span>
-        </a>
-    </div>
-
-</footer>    <footer>
-
-  <p id="copyright">&copy; <span id="year"></span> JavaChrist. Tous droits réservés.</p>
-
-  <div>
-      <a href="/fr/mentions-legales.html" class="license-link">
-          Mentions légales |
-      </a>
-      <a href="/fr/politique-confidentialite.html" class="license-link">Politique de confidentialité</a>
-  </div>
-
-  <div class="home-sci">
       <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
-          <i class="bx bxl-twitter" aria-hidden="true"></i>
-          <span class="sr-only">Suivez-moi sur Twitter</span>
+        <i class="bx bxl-twitter" aria-hidden="true"></i>
+        <span class="sr-only">Suivez-moi sur Twitter</span>
       </a>
       <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
-          <i class="bx bxl-linkedin" aria-hidden="true"></i>
-          <span class="sr-only">Suivez-moi sur LinkedIn</span>
+        <i class="bx bxl-linkedin" aria-hidden="true"></i>
+        <span class="sr-only">Suivez-moi sur LinkedIn</span>
       </a>
       <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
-          <i class="bx bxl-github" aria-hidden="true"></i>
-          <span class="sr-only">Regardez mon travail sur Github</span>
+        <i class="bx bxl-github" aria-hidden="true"></i>
+        <span class="sr-only">Regardez mon travail sur Github</span>
       </a>
-  </div>
+    </div>
 
-</footer>
+  </footer>
+  <footer>
+
+    <p id="copyright">&copy; <span id="year"></span> JavaChrist. Tous droits réservés.</p>
+
+    <div>
+      <a href="/fr/mentions-legales.html" class="license-link">
+        Mentions légales |
+      </a>
+      <a href="/fr/politique-confidentialite.html" class="license-link">Politique de confidentialité</a>
+    </div>
+
+    <div class="home-sci">
+      <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
+        <i class="bx bxl-twitter" aria-hidden="true"></i>
+        <span class="sr-only">Suivez-moi sur Twitter</span>
+      </a>
+      <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
+        <i class="bx bxl-linkedin" aria-hidden="true"></i>
+        <span class="sr-only">Suivez-moi sur LinkedIn</span>
+      </a>
+      <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
+        <i class="bx bxl-github" aria-hidden="true"></i>
+        <span class="sr-only">Regardez mon travail sur Github</span>
+      </a>
+    </div>
+
+  </footer>
   <script src="/script.js"></script>
 </body>
 
