--- a/fr/projets.html
+++ b/fr/projets.html
@@ -58,6 +58,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" media="print" onload="this.media='all'">
+
+    <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/projet.html" />
+    <link rel="alternate" hreflang="en" href="https://www.javachrist.fr/en/project.html" />
+    <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
+
 </head>
 
 <body>
