Mise en place de modifications pour indexation google

--- a/en/home.html
+++ b/en/home.html
@@ -62,6 +62,8 @@
     <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/index.html" />
     <link rel="alternate" hreflang="en" href="https://www.javachrist.fr/en/home.html" />
     <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
+    <link rel="canonical" href="https://www.javachrist.fr/en/home.html">
+
     
 </head>
 
