mise en place des votes sur faq en

--- a/en/faq.html
+++ b/en/faq.html
@@ -130,8 +130,8 @@
     <section class="faq-section">
 
       <container class="faq-section__header">
-        <h1 class="faq-section__title">Foire aux questions</h1>
-        <p class="faq-section__surtitle">Cliquez sur les questions</p>
+        <h1 class="faq-section__title">Frequently asked questions</h1>
+        <p class="faq-section__surtitle">Click on the questions</p>
       </container>
 
       <article class="faq">
@@ -155,6 +155,17 @@
                     complete sites
                     for companies, with a focus on modern design, ergonomics and performance.</strong>
                 </p>
+                <div class="feedback-container">
+                  <p>Was this answer helpful ?</p>
+                  <div class="feedback-buttons">
+                    <button class="feedback-btn" data-value="yes">
+                      <i class='bx bx-like'></i>
+                    </button>
+                    <button class="feedback-btn" data-value="no">
+                      <i class='bx bx-dislike'></i>
+                    </button>
+                  </div>
+                </div>
               </div>
 
             </div>
@@ -182,6 +193,17 @@
                   advancement.
                   Finally, <strong> after final validation,</strong> the site is put online.
                 </p>
+                <div class="feedback-container">
+                  <p>Was this answer helpful ?</p>
+                  <div class="feedback-buttons">
+                    <button class="feedback-btn" data-value="yes">
+                      <i class='bx bx-like'></i>
+                    </button>
+                    <button class="feedback-btn" data-value="no">
+                      <i class='bx bx-dislike'></i>
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -204,6 +226,17 @@
                   be ready in two
                   weeks, whereas a more complex site or an e-commerce usually takes a little longer.
                 </p>
+                <div class="feedback-container">
+                  <p>Was this answer helpful ?</p>
+                  <div class="feedback-buttons">
+                    <button class="feedback-btn" data-value="yes">
+                      <i class='bx bx-like'></i>
+                    </button>
+                    <button class="feedback-btn" data-value="no">
+                      <i class='bx bx-dislike'></i>
+                    </button>
+                  </div>
+                </div>
               </div>
 
             </div>
@@ -228,6 +261,17 @@
                     appointment </a>
                   to discuss your specific needs.
                 </p>
+                <div class="feedback-container">
+                  <p>Was this answer helpful ?</p>
+                  <div class="feedback-buttons">
+                    <button class="feedback-btn" data-value="yes">
+                      <i class='bx bx-like'></i>
+                    </button>
+                    <button class="feedback-btn" data-value="no">
+                      <i class='bx bx-dislike'></i>
+                    </button>
+                  </div>
+                </div>
               </div>
 
             </div>
@@ -250,6 +294,17 @@
                   the project, with
                   the balance on final delivery. Other payment options may be considered if necessary.
                 </p>
+                <div class="feedback-container">
+                  <p>Was this answer helpful ?</p>
+                  <div class="feedback-buttons">
+                    <button class="feedback-btn" data-value="yes">
+                      <i class='bx bx-like'></i>
+                    </button>
+                    <button class="feedback-btn" data-value="no">
+                      <i class='bx bx-dislike'></i>
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -273,6 +328,17 @@
                   also <strong> monthly maintenance contracts </strong>for those who want a
                   continues.
                 </p>
+                <div class="feedback-container">
+                  <p>Was this answer helpful ?</p>
+                  <div class="feedback-buttons">
+                    <button class="feedback-btn" data-value="yes">
+                      <i class='bx bx-like'></i>
+                    </button>
+                    <button class="feedback-btn" data-value="no">
+                      <i class='bx bx-dislike'></i>
+                    </button>
+                  </div>
+                </div>
               </div>
 
             </div>
@@ -299,6 +365,17 @@
                   </strong> without
                   technical knowledge.
                 </p>
+                <div class="feedback-container">
+                  <p>Was this answer helpful ?</p>
+                  <div class="feedback-buttons">
+                    <button class="feedback-btn" data-value="yes">
+                      <i class='bx bx-like'></i>
+                    </button>
+                    <button class="feedback-btn" data-value="no">
+                      <i class='bx bx-dislike'></i>
+                    </button>
+                  </div>
+                </div>
               </div>
 
             </div>
@@ -332,6 +409,17 @@
                   adapt our
                   services to your goals and budget.
                 </p>
+                <div class="feedback-container">
+                  <p>Was this answer helpful ?</p>
+                  <div class="feedback-buttons">
+                    <button class="feedback-btn" data-value="yes">
+                      <i class='bx bx-like'></i>
+                    </button>
+                    <button class="feedback-btn" data-value="no">
+                      <i class='bx bx-dislike'></i>
+                    </button>
+                  </div>
+                </div>
               </div>
 
             </div>
@@ -339,6 +427,22 @@
           </li>
 
         </ul>
+
+        <div class="global-feedback-container">
+          <h2 style="color: #0ef; margin-bottom: 15px;">Your opinion matters !</h2>
+          <p>Were these answers helpful ? Help us improve our FAQ</p>
+          <div class="stats-bars">
+            <div class="stat-bar">
+              <div class="stat-fill" style="width: 0%"></div>
+              <span>👍 0% (0)</span>
+            </div>
+            <div class="stat-bar">
+              <div class="stat-fill" style="width: 0%"></div>
+              <span>👎 0% (0)</span>
+            </div>
+          </div>
+          <p class="total-votes">total votes : 0</p>
+        </div>
 
       </article>
 
