Modification de sitemap pour google

--- a/fr/faq.html
+++ b/fr/faq.html
@@ -61,7 +61,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-  rel="stylesheet" media="print" onload="this.media='all'">
+    rel="stylesheet" media="print" onload="this.media='all'">
 
   <!-- Hreflang tags for SEO -->
   <link rel="alternate" hreflang="fr" href="https://www.javachrist.fr/fr/faq.html" />
@@ -69,7 +69,7 @@
   <link rel="alternate" hreflang="x-default" href="https://www.javachrist.fr/" />
 </head>
 
-<body> 
+<body>
 
   <header>
 
@@ -114,9 +114,9 @@
       <a href="/fr/projets.html" style="--i: 5">Projets</a>
       <a href="/fr/contact.html" style="--i: 6">Contact</a>
       <a href="/fr/faq.html" style="--i: 7">FAQ</a>
-        <a href="/fr/forum.html" style="--i: 8">Forum</a>
-        <a href="/en/home.html" style="--i: 9">English</a>
-        <a href="/fr/login.html" style="--i: 10">Login</a>
+      <a href="/fr/forum.html" style="--i: 8">Forum</a>
+      <a href="/en/home.html" style="--i: 9">English</a>
+      <a href="/fr/login.html" style="--i: 10">Login</a>
     </nav>
 
     <div class="hamburger" id="hamburger">
@@ -141,8 +141,7 @@
           <li class="faq__question">
             <button class="faq__question-toggler" aria-expanded="false" aria-controls="content-container-1"
               id="accordion-btn1">
-              <img src="/assets/logo/chevron.svg" alt=""
-                class="faq__question-toggler-icon" />
+              <img src="/assets/logo/chevron.svg" alt="" class="faq__question-toggler-icon" />
               <span class="faq__question-toggler-text">Quels types de sites web pouvez-vous créer ?</span>
             </button>
 
@@ -169,7 +168,7 @@
                   </div>
                 </div>
               </div>
-              
+
             </div>
           </li>
 
@@ -431,7 +430,7 @@
           </li>
         </ul>
 
-        
+
         <div class="global-feedback-container">
           <h2 style="color: #0ef; margin-bottom: 15px;">Votre avis compte !</h2>
           <p>Ces réponses vous ont-elles été utiles ? Aidez-nous à améliorer notre FAQ</p>
@@ -458,30 +457,30 @@
     <p id="copyright">&copy; <span id="year"></span> JavaChrist. Tous droits réservés.</p>
 
     <div>
-        <a href="/fr/mentions-legales.html" class="license-link">
-            Mentions légales |
-        </a>
-        <a href="/fr/politique-confidentialite.html" class="license-link">Politique de confidentialité</a>
+      <a href="/fr/mentions-legales.html" class="license-link">
+        Mentions légales |
+      </a>
+      <a href="/fr/politique-confidentialite.html" class="license-link">Politique de confidentialité</a>
     </div>
 
     <div class="home-sci">
-        <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
-            <i class="bx bxl-twitter" aria-hidden="true"></i>
-            <span class="sr-only">Suivez-moi sur Twitter</span>
-        </a>
-        <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
-            <i class="bx bxl-linkedin" aria-hidden="true"></i>
-            <span class="sr-only">Suivez-moi sur LinkedIn</span>
-        </a>
-        <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
-            <i class="bx bxl-github" aria-hidden="true"></i>
-            <span class="sr-only">Regardez mon travail sur Github</span>
-        </a>
+      <a href="https://twitter.com/Mis7erC" target="_blank" rel="noopener noreferrer" style="--i: 8">
+        <i class="bx bxl-twitter" aria-hidden="true"></i>
+        <span class="sr-only">Suivez-moi sur Twitter</span>
+      </a>
+      <a href="https://www.linkedin.com/in/javachrist/" target="_blank" rel="noopener noreferrer" style="--i: 9">
+        <i class="bx bxl-linkedin" aria-hidden="true"></i>
+        <span class="sr-only">Suivez-moi sur LinkedIn</span>
+      </a>
+      <a href="https://github.com/JavaChrist" target="_blank" rel="noopener noreferrer" style="--i: 10">
+        <i class="bx bxl-github" aria-hidden="true"></i>
+        <span class="sr-only">Regardez mon travail sur Github</span>
+      </a>
     </div>
 
-</footer>
-  
-  <script src="/faq.js"></script>
+  </footer>
+
+  <script type="module" src="/faq.js"></script>
   <script src="/script.js"></script>
 </body>
 
