--- a/en/faq.html
+++ b/en/faq.html
@@ -475,7 +475,7 @@
     </div>
   </footer>
 
-  <script src="/faq.js"></script>
+  <script type="module" src="/faq.js"></script>
   <script src="/script.js"></script>
 </body>
 
